src/objects/Ad_Web_Performance__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Stage__c</fullName>
        <label>Campaign Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Mid-Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Apply_Clicks__c</fullName>
        <label>Job Apply Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Views__c</fullName>
        <label>Job Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vacancy__c</fullName>
        <label>Vacancy</label>
        <referenceTo>Vacancy__c</referenceTo>
        <relationshipName>Ad_Web_Performance_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Ad Web Metrics</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A{00000000}</displayFormat>
        <label>Ad Web Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Web Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>